--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
   }
-  
 }
